src/z80asm/z80asm2/t/40-syntax/expected/assume_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/assume_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/40-syntax/input/assume_01.asm...
t/40-syntax/input/assume_01.asm:2:2: error: ADL not supported on z80
    .assume adl=0
     ^
t/40-syntax/input/assume_01.asm:4:2: error: ADL not supported on z80
    .assume adl=1
     ^
Program
    OpcodeStmt
        Location: t/40-syntax/input/assume_01.asm:1:2
        Address: 0
        Bytes: $21 0 0
        Patches:
            Patch
                Offset: 1, Size: 2
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprLiteralInt: 1
    OpcodeStmt
        Location: t/40-syntax/input/assume_01.asm:3:2
        Address: 0
        Bytes: $21 0 0
        Patches:
            Patch
                Offset: 1, Size: 2
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprLiteralInt: 1
    OpcodeStmt
        Location: t/40-syntax/input/assume_01.asm:5:2
        Address: 0
        Bytes: $21 0 0
        Patches:
            Patch
                Offset: 1, Size: 2
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprLiteralInt: 1
